hphp/test/slow/methods-to-many.php.expectf
Fatal error: Class A has 65537 methods (maximum is 65535) in %s/methods-to-many.php on line 2
